<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EWS-3SWJ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_ews_3swj">Welcome to EWS-3SWJ</string>
    <string name="desc_app">Ecologycal Assessment for Water Ecosystem Using Macrobenthic Assemblages</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="payment">Pembayaran</string>
    <string name="registration">Daftar</string>
    <string name="repeat_password">Ulangi password</string>
    <string name="name">Nama</string>
    <string name="membership">Membership</string>
    <string name="trial">Percobaan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nama</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_data_user">Data Pengguna</string>
    <string name="menu_data_payment">Data Pembayaran</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="send">Kirim</string>
    <string name="proof_of_payment">Bukti Pembayaran (max 2MB)</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_operator">Operator</string>
    <string name="menu_data_weight">Data Bobot</string>
    <string name="add_index_biotic">Tambah Index Biotik</string>
    <string name="menu_data_family_biotic">Data Keluarga Biotik</string>
    <string name="menu_data_station">Data Lingkungan</string>
    <string name="menu_main">Main</string>
    <string name="menu_input_data">Input Data</string>
    <string name="menu_input_history">Histori Pengisian</string>
    <string name="desc_add_user">menambah user</string>
    <string name="desc_arrow_forward">arrow forward</string>
    <string name="info_detail_user">Info Detail User</string>
    <string name="email">Email</string>
    <string name="id">Id</string>
    <string name="role">Role</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string name="deactivate">Nonaktifkan</string>
    <string name="activate">Aktifkan</string>
    <string name="delete">Hapus</string>
    <string name="edit">Edit</string>
    <string name="active">Aktif</string>
    <string name="not_active">Tidak Aktif</string>
    <string name="confirmed">Terkonfirmasi</string>
    <string name="not_confirmed">Tak Terkonfirmasi</string>
    <string name="confirm">konfirmasi</string>
    <string name="unconfrim">Batalkan</string>
    <string name="something_went_wrong">Terjadi Kesalahan</string>
    <string name="no_data_user">Tidak Ada Data Pengguna</string>
    <string name="logout">Keluar</string>
    <string name="cancel">batal</string>
    <string name="confirm_delete_user">Anda yakin untuk menghapus akun ini?</string>
    <string name="confirm_activate_user">Are you sure want to %s this account?</string>
    <string name="confirm_delete_payment">Anda yakin untuk menghapus pembayaran ini?</string>
    <string name="confirm_confirm_payment">Are you sure want to %s this payment?</string>
    <string name="confirm_delete_index_biotic">Anda yakin untuk menghapus indek biotik ini?</string>
    <string name="confirm_delete_main_abiotic">Anda yakin untuk menghapus abiotik utama ini?</string>
    <string name="confirm_delete_additional_abiotic">Anda yakin untuk menghapus abiotik tambahan ini?</string>
    <string name="confirm_delete_family_biotic">Anda yakin untuk menghapus keluarga biotik ini?</string>
    <string name="confirm_delete_biotic_data">Anda yakin untuk menghapus data biotik ini?</string>
    <string name="confirm_delete_station">Anda yakin untuk menghapus data lingkungan ini?</string>
    <string name="label">Label</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="add">Tambah</string>
    <string name="add_user">Tambah Pengguna</string>
    <string name="edit_user">Edit Pengguna</string>
    <string name="date">Tanggal</string>
    <string name="proof">Bukti</string>
    <string name="desc_proof_of_payment">Bukti Pembayaran</string>
    <string name="info_detail_payment">Info Detail Pembayaran</string>
    <string name="no_results">Tanpa Hasil</string>
    <string name="value">Nilai</string>
    <string name="type_of_parameter">Tipe Parameter</string>
    <string name="info_detail">Info Detail</string>
    <string name="initial_value">Nilai Awal</string>
    <string name="final_value">Nilai Akhir</string>
    <string name="weight">Bobot</string>
    <string name="geographical_zone">Zona Geografis</string>
    <string name="type_of_water">Tipe Air</string>
    <string name="parameter_name">Nama Parameter</string>
    <string name="edit_index_biotic">Edit Indeks Biotik</string>
    <string name="add_main_abiotic">Tambah AbiotiK Utama</string>
    <string name="edit_main_abiotic">Edit AbiotiK Utama</string>
    <string name="select_parameter">Pilih Parameter</string>
    <string name="add_additional_abiotic">Tambah Abiotik Tambahan</string>
    <string name="edit_additional_abiotic">Edit Abiotik Tambahan</string>
    <string name="family_biotic">Keluarga Biotik</string>
    <string name="desc_edit">Edit</string>
    <string name="desc_delete">Hapus</string>
    <string name="add_family_biotic">Tambah Keluarga Biotik</string>
    <string name="family">Keluarga</string>
    <string name="edit_family_biotic">Edit Keluarga Biotik</string>
    <string name="input_station">Input Lingkungan</string>
    <string name="station_id">Station ID</string>
    <string name="proceed">Proses</string>
    <string name="abundance">Kelimpahan</string>
    <string name="species">Spesies</string>
    <string name="next">Selanjutnya</string>
    <string name="add_species">Klik \"Tambah\" untuk menambah data biotik</string>
    <string name="input_main_biotic">Input Parameter Utama</string>
    <string name="input_main_abiotic">Input Parameter Utama</string>
    <string name="add_biotic">tambah Data Biotik</string>
    <string name="menu_input_station">Input Station</string>
    <string name="temperature">Suhu (℃)</string>
    <string name="salinity">Salinitas</string>
    <string name="do_mg_l">DO (mg/L)</string>
    <string name="ph">pH</string>
    <string name="back">Kembali</string>
    <string name="similarity">Similaritas (J)</string>
    <string name="dominance" tools:ignore="TypographyOther">Dominance/Dominan(C)</string>
    <string name="diversity">Diversity/Keanekaragaman (H\')</string>
    <string name="sum_abundance">Total Abundance/Kelimpahan</string>
    <string name="sum_species">Jumlah Species</string>
    <string name="indicator_taxa">Nilai dari Indikator Taxa</string>
    <string name="input_add_param">Input Parameter Tambahan</string>
    <string name="biotic">Biotik</string>
    <string name="abiotic">Abiotik</string>
    <string name="conductivity">Konduktivitas (S)</string>
    <string name="ratio">Ratio C/N</string>
    <string name="turbidity">Turbiditas/Kekeruhan (ntu)</string>
    <string name="sand">Sand/Pasir (%)</string>
    <string name="clay">Clay/Tanah Liat (%)</string>
    <string name="silt">Silt/Endapan Lumpur (%)</string>
    <string name="count">Hitung</string>
    <string name="result">Hasil</string>
    <string name="conclusion">Kesimpulan</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="station">Station Info</string>
    <string name="save">Simpan</string>
    <string name="created_by">Dibuat pada</string>
    <string name="taxa_indicator">Taxa indicator</string>
    <string name="label_taxa_indicator">Taxa Indicator</string>
    <string name="result_history">Histori Hasil</string>
    <string name="view_proof">Lihat</string>
    <string name="desc_icon_app">icon application</string>
    <string name="user_profile">Profile Pengguna</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Ubah Password</string>
    <string name="current_password">Password Saat ini</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_new_password">Konfirmasi password baru</string>

    <string-array name="type_param">
        <item>Index Biotic</item>
        <item>Main Abiotic</item>
        <item>Additional Abiotic</item>
    </string-array>

    <string-array name="index_biotic_param">
        <item>Diversity</item>
        <item>Dominance</item>
        <item>Number of Species</item>
        <item>Similarity</item>
        <item>Total Abundance</item>
    </string-array>

    <string-array name="main_abiotic_param">
        <item>DO</item>
        <item>PH</item>
        <item>Salinity</item>
        <item>Temperature</item>
    </string-array>

    <string-array name="additional_abiotic_param">
        <item>Clay</item>
        <item>Conductivity</item>
        <item>Kekeruhan</item>
        <item>Ratio CN</item>
        <item>Sand</item>
        <item>Silt</item>
        <item>Turbidity</item>
    </string-array>

    <string-array name="status">
        <item>Daerah Tidak Terganggu</item>
        <item>Area Terganggu Ringan</item>
        <item>Daerah Cukup Terganggu</item>
        <item>Area Terganggu Berat</item>
    </string-array>

    <string-array name="conclusion">
        <item>Kondisi lingkungan perairan sehat, dalam batas normal dan tidak terganggu (Daerah Tidak Terganggu)</item>
        <item>Lingkungan perairan terganggu tingkat ringan oleh aktivitas di sekitarnya (Area Terganggu Ringan)</item>
        <item>Lingkungan perairan terganggu tingkat sedang oleh aktivitas sekitarnya (Area Terganggu Sedang)</item>
        <item>The aquatic environment is disrupted high level by the surrounding activity (Heavily Disturbed Areas)</item>
    </string-array>

    <string-array name="recommendation">
        <item>Menjaga daya dukung lingkungan (daya dukung lingkungan) dalam kondisi normal/stabil (equilibrium/seimbang)</item>
        <item>Diperlukan pemantauan lebih lanjut terhadap kondisi lingkungan setempat dan perlu mengidentifikasi penyebab utama gangguan lingkungan.</item>
        <item>Investigasi lebih lanjut dan penerapan biomonitoring secara berkala diperlukan untuk mengetahui faktor penyebab gangguan lingkungan dan penurunan aktivitas</item>
        <item>Immediate action is required to restore local environmental conditions (recovery action). And if necessary, stop the temporary activity of the cause of environmental disturbance (vallowing action) at the time period that determined based on abiotic and biotic factors</item>
    </string-array>

</resources>