<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                style="@style/Text.Regular.UserLabel"
                android:layout_marginEnd="70dp"
                android:text="@string/species" />

            <TextView
                android:id="@+id/item_tv_species"
                style="@style/Text.SemiBold.UserValue"
                tools:text="@string/value" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                style="@style/Text.Regular.UserLabel"
                android:layout_marginEnd="70dp"
                android:text="@string/family" />

            <TextView
                android:id="@+id/item_tv_family"
                style="@style/Text.SemiBold.UserValue"
                tools:text="@string/value" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                style="@style/Text.Regular.UserLabel"
                android:layout_marginEnd="16dp"
                android:text="@string/taxa_indicator" />

            <TextView
                android:id="@+id/item_tv_taxa_indicator"
                style="@style/Text.SemiBold.UserValue"
                tools:text="@string/value" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                style="@style/Text.Regular.UserLabel"
                android:text="@string/station_id" />

            <TextView
                android:id="@+id/item_tv_station_id"
                style="@style/Text.SemiBold.UserValue"
                tools:text="@string/value" />
        </TableRow>

    </TableLayout>

</androidx.cardview.widget.CardView>