<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="Nama Parameter"
                android:textColor="@color/jet"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:text="Deskripsi Parameter"
                android:textColor="@color/jet"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_parameter_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/desc_edit"
            android:src="@drawable/ic_edit"
            android:text="@string/edit" />

        <ImageButton
            android:id="@+id/btn_parameter_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/desc_delete"
            android:src="@drawable/ic_delete"
            android:text="@string/delete" />

    </LinearLayout>

</androidx.cardview.widget.CardView>